--- a/Index.html
+++ b/Index.html
@@ -3,65 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <title>Responsive Web Page</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">
-                <img src="White Logo.png" alt="Logo">
+    <header class="bg-navbar text-white">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="#">
+                <img src="assets/White Logo.png" alt="Logo" height="25">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">SERVICES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">ABOUT US</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">CONTACT US</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">CAREERS</a></li>
+                </ul>
             </div>
-            <ul>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">CONTACT US</a></li>
-                <li><a href="#">CAREERS</a></li>
-            </ul>
         </nav>
     </header>
-    <div class="hero">
-        <img src="Hero Image.png" alt="Hero Image">
+    <!-- Hero Section -->
+    <section class="hero">
+        <img src="assets/Hero Image.png" alt="Hero Image" class="img-fluid">
         <div class="overlay">
             <div class="content">
                 <div class="paragraph">We crush your<br> competitors, goals, and
                     <br> sales records without<br> the B.S</div>
-                <button class="get-started-btn" type="button">GET FREE CONSULTATION</button>
+                <button class="btn btn-lg btn-orange get-started-btn" type="button">GET FREE CONSULTATION</button>
             </div>
         </div>
-    </div>
-    <div class="content-container">
-        <img src="image 2.png" alt="Description Image">
-        <div class="text-content">
-            <h2>Web & Mobile App Development</h2>
-            <p>
-                Your web and mobile apps are pieces of the puzzle<br> to grow your business.<br> We use frameworks that tailor content<br>
-                 and engagement <br>methods to respond to different intents shown by your<br> potential customers who interact with your business online.
-            </p>
-            <button class="learn-more" type="button">Learn More</button>
-        </div>
-    </div>
-    <div class="content-container2">
-        <div class="text-content">
-            <h2>Digital Strategy Consulting</h2>
-            <p>
-                Your digital strategy should complement the <br>
-                overall marketing strategy of the company. In online marketing,<br> each component will never work in<br>
-                 isolation and every business needs a different mix. We provide a clear<br>
-                  concept and strategic overview to find the most efficient model for your business.
-            </p>
-            <button class="learn-more" type="button">Learn More</button>
-        </div>
-        <img src="image 1.png" alt="Description Image">
-    </div>
-    <footer>
+    </section>
+
+    <footer class="bg-footer text-white">
         <div class="logo2">
-            <img src="White Logo.png" alt="Logo">
+            <img src="assets/White Logo.png" alt="Logo" height="25">
         </div>
-        <p>Your goal is our target. Not anything in between.<br> 
-            We use online marketing platforms and tools<br> to achieve single objective - your business results.</p>
+        <p>Your goal is our target. Not anything in between.<br> We use online marketing platforms and tools<br> to achieve a single objective - your business results.</p>
     </footer>
-    
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
